--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -2,6 +2,200 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2f93ec88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# File and sheet details\n",
+    "file_path = \"GHA.xlsx\"\n",
+    "sheet_name = \"Headcount - Employee Detail\"\n",
+    "\n",
+    "# Column mappings\n",
+    "ID_COL = \"Employee ID\"\n",
+    "NAME_COL = \"Employee Name\"\n",
+    "EMAIL_COL = \"Employee Business Email Address\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
+    "MGR_ID_COL = \"Manager Employee ID\"\n",
+    "MGR_NAME_COL = \"Manager Name\"\n",
+    "\n",
+    "# Read the Excel data\n",
+    "df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "\n",
+    "# Clean up whitespace in key columns\n",
+    "df[ID_COL] = df[ID_COL].astype(str).str.strip()\n",
+    "df[MGR_ID_COL] = df[MGR_ID_COL].astype(str).str.strip()\n",
+    "\n",
+    "# Build a map of Employee ID → row\n",
+    "df_emp_map = df.set_index(ID_COL)\n",
+    "\n",
+    "# Final output rows and exceptions\n",
+    "final_rows = []\n",
+    "exceptions = []\n",
+    "\n",
+    "# Identify all MDs\n",
+    "md_df = df[df[GCB_COL] == \"MD\"]\n",
+    "\n",
+    "# Function to get a row safely\n",
+    "def get_emp_row(emp_id):\n",
+    "    try:\n",
+    "        return df_emp_map.loc[emp_id]\n",
+    "    except KeyError:\n",
+    "        return None\n",
+    "\n",
+    "# Traverse from MD → GCB3 → GCB3/4 → Employee\n",
+    "for _, md in md_df.iterrows():\n",
+    "    md_id = md[ID_COL]\n",
+    "    md_name = md[NAME_COL]\n",
+    "    md_email = md[EMAIL_COL]\n",
+    "\n",
+    "    # GCB3s reporting to this MD\n",
+    "    gcb3s = df[(df[MGR_ID_COL] == md_id) & (df[GCB_COL] == \"3\")]\n",
+    "\n",
+    "    for _, gcb3 in gcb3s.iterrows():\n",
+    "        gcb3_id = gcb3[ID_COL]\n",
+    "        gcb3_name = gcb3[NAME_COL]\n",
+    "        gcb3_email = gcb3[EMAIL_COL]\n",
+    "\n",
+    "        # Add GCB3's own row\n",
+    "        final_rows.append({\n",
+    "            \"MD ID\": md_id,\n",
+    "            \"MD Name\": md_name,\n",
+    "            \"MD Email\": md_email,\n",
+    "            \"GCB3 ID\": gcb3_id,\n",
+    "            \"GCB3 Name\": gcb3_name,\n",
+    "            \"GCB3 Email\": gcb3_email,\n",
+    "            \"Reporting Manager ID\": \"\",\n",
+    "            \"Reporting Manager Name\": \"\",\n",
+    "            \"Employee ID\": gcb3_id,\n",
+    "            \"Employee Name\": gcb3_name,\n",
+    "            \"Email ID\": gcb3_email,\n",
+    "            \"Global Career Band\": gcb3[GCB_COL],\n",
+    "            \"Department\": gcb3[\"Department\"],\n",
+    "            \"Company\": gcb3[\"Company\"],\n",
+    "            \"Job Function\": gcb3[\"Job Function\"]\n",
+    "        })\n",
+    "\n",
+    "        # GCB3/4s reporting to this GCB3\n",
+    "        direct_mgrs = df[(df[MGR_ID_COL] == gcb3_id) & (df[GCB_COL].isin([\"3\", \"4\"]))]\n",
+    "\n",
+    "        for _, rm in direct_mgrs.iterrows():\n",
+    "            rm_id = rm[ID_COL]\n",
+    "            rm_name = rm[NAME_COL]\n",
+    "            rm_email = rm[EMAIL_COL]\n",
+    "\n",
+    "            # Add Reporting Manager’s own row\n",
+    "            final_rows.append({\n",
+    "                \"MD ID\": md_id,\n",
+    "                \"MD Name\": md_name,\n",
+    "                \"MD Email\": md_email,\n",
+    "                \"GCB3 ID\": gcb3_id,\n",
+    "                \"GCB3 Name\": gcb3_name,\n",
+    "                \"GCB3 Email\": gcb3_email,\n",
+    "                \"Reporting Manager ID\": rm_id,\n",
+    "                \"Reporting Manager Name\": rm_name,\n",
+    "                \"Employee ID\": rm_id,\n",
+    "                \"Employee Name\": rm_name,\n",
+    "                \"Email ID\": rm_email,\n",
+    "                \"Global Career Band\": rm[GCB_COL],\n",
+    "                \"Department\": rm[\"Department\"],\n",
+    "                \"Company\": rm[\"Company\"],\n",
+    "                \"Job Function\": rm[\"Job Function\"]\n",
+    "            })\n",
+    "\n",
+    "            # Employees under this reporting manager\n",
+    "            emps = df[df[MGR_ID_COL] == rm_id]\n",
+    "\n",
+    "            for _, emp in emps.iterrows():\n",
+    "                final_rows.append({\n",
+    "                    \"MD ID\": md_id,\n",
+    "                    \"MD Name\": md_name,\n",
+    "                    \"MD Email\": md_email,\n",
+    "                    \"GCB3 ID\": gcb3_id,\n",
+    "                    \"GCB3 Name\": gcb3_name,\n",
+    "                    \"GCB3 Email\": gcb3_email,\n",
+    "                    \"Reporting Manager ID\": rm_id,\n",
+    "                    \"Reporting Manager Name\": rm_name,\n",
+    "                    \"Employee ID\": emp[ID_COL],\n",
+    "                    \"Employee Name\": emp[NAME_COL],\n",
+    "                    \"Email ID\": emp[EMAIL_COL],\n",
+    "                    \"Global Career Band\": emp[GCB_COL],\n",
+    "                    \"Department\": emp[\"Department\"],\n",
+    "                    \"Company\": emp[\"Company\"],\n",
+    "                    \"Job Function\": emp[\"Job Function\"]\n",
+    "                })\n",
+    "\n",
+    "    # Employees directly under MD (not under GCB3s)\n",
+    "    direct_emps = df[(df[MGR_ID_COL] == md_id) & (~df[ID_COL].isin(gcb3s[ID_COL]))]\n",
+    "\n",
+    "    for _, emp in direct_emps.iterrows():\n",
+    "        final_rows.append({\n",
+    "            \"MD ID\": md_id,\n",
+    "            \"MD Name\": md_name,\n",
+    "            \"MD Email\": md_email,\n",
+    "            \"GCB3 ID\": \"\",\n",
+    "            \"GCB3 Name\": \"\",\n",
+    "            \"GCB3 Email\": \"\",\n",
+    "            \"Reporting Manager ID\": \"\",\n",
+    "            \"Reporting Manager Name\": \"\",\n",
+    "            \"Employee ID\": emp[ID_COL],\n",
+    "            \"Employee Name\": emp[NAME_COL],\n",
+    "            \"Email ID\": emp[EMAIL_COL],\n",
+    "            \"Global Career Band\": emp[GCB_COL],\n",
+    "            \"Department\": emp[\"Department\"],\n",
+    "            \"Company\": emp[\"Company\"],\n",
+    "            \"Job Function\": emp[\"Job Function\"]\n",
+    "        })\n",
+    "\n",
+    "# Collect employees whose manager is missing from data, excluding MDs\n",
+    "all_mgr_ids = set(df[MGR_ID_COL])\n",
+    "all_emp_ids = set(df[ID_COL])\n",
+    "missing_mgr_ids = all_mgr_ids - all_emp_ids\n",
+    "\n",
+    "for _, emp in df[df[MGR_ID_COL].isin(missing_mgr_ids)].iterrows():\n",
+    "    if emp[GCB_COL] == \"MD\":\n",
+    "        continue\n",
+    "    exceptions.append({\n",
+    "        \"MD ID\": \"\",\n",
+    "        \"MD Name\": \"\",\n",
+    "        \"MD Email\": \"\",\n",
+    "        \"GCB3 ID\": \"\",\n",
+    "        \"GCB3 Name\": \"\",\n",
+    "        \"GCB3 Email\": \"\",\n",
+    "        \"Reporting Manager ID\": \"\",\n",
+    "        \"Reporting Manager Name\": \"\",\n",
+    "        \"Employee ID\": emp[ID_COL],\n",
+    "        \"Employee Name\": emp[NAME_COL],\n",
+    "        \"Email ID\": emp[EMAIL_COL],\n",
+    "        \"Global Career Band\": emp[GCB_COL],\n",
+    "        \"Department\": emp[\"Department\"],\n",
+    "        \"Company\": emp[\"Company\"],\n",
+    "        \"Job Function\": emp[\"Job Function\"]\n",
+    "    })\n",
+    "\n",
+    "# Convert to DataFrames\n",
+    "final_df = pd.DataFrame(final_rows)\n",
+    "exceptions_df = pd.DataFrame(exceptions)\n",
+    "\n",
+    "# Sort hierarchy report\n",
+    "final_df.sort_values(\n",
+    "    by=[\"MD Name\", \"GCB3 Name\", \"Reporting Manager Name\", \"Employee Name\"],\n",
+    "    inplace=True,\n",
+    "    na_position=\"last\"\n",
+    ")\n",
+    "\n",
+    "# Write to Excel\n",
+    "with pd.ExcelWriter(\"Task_One_Hierarchy_Report.xlsx\", engine=\"openpyxl\") as writer:\n",
+    "    final_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "    exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "print(\"✅ Hierarchy report saved as: Task_One_Hierarchy_Report.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "edb720fa",
    "metadata": {},
