--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,18 +3,137 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "902fe0f9",
+   "id": "c4bdc2da",
    "metadata": {},
    "outputs": [
     {
      "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: ''",
+     "evalue": "[Errno 2] No such file or directory: 'Employee Allocation file.xlsx'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-3b74e535d68b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m# Loop through Excel files\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfolder_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\".xlsx\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\".xlsm\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mfile_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfolder_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: ''"
+      "\u001b[1;32m<ipython-input-1-c1bc82ae3e56>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m# === STEP 1: Load files ===\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mgsc_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mallocation_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msheet_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mallocation_sheet\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"EMPLOYEE_ID\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mbase_df_updated\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbase_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msheet_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbase_sheet\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"PSID\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\Kirti\\anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    297\u001b[0m                 )\n\u001b[0;32m    298\u001b[0m                 \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFutureWarning\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacklevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 299\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    300\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    301\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\Kirti\\anaconda3\\lib\\site-packages\\pandas\\io\\excel\\_base.py\u001b[0m in \u001b[0;36mread_excel\u001b[1;34m(io, sheet_name, header, names, index_col, usecols, squeeze, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, thousands, comment, skipfooter, convert_float, mangle_dupe_cols, storage_options)\u001b[0m\n\u001b[0;32m    334\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mio\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mExcelFile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    335\u001b[0m         \u001b[0mshould_close\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 336\u001b[1;33m         \u001b[0mio\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mExcelFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mio\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstorage_options\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    337\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    338\u001b[0m         raise ValueError(\n",
+      "\u001b[1;32mC:\\Users\\Kirti\\anaconda3\\lib\\site-packages\\pandas\\io\\excel\\_base.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, path_or_buffer, engine, storage_options)\u001b[0m\n\u001b[0;32m   1069\u001b[0m                 \u001b[0mext\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"xls\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1070\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1071\u001b[1;33m                 ext = inspect_excel_format(\n\u001b[0m\u001b[0;32m   1072\u001b[0m                     \u001b[0mcontent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstorage_options\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1073\u001b[0m                 )\n",
+      "\u001b[1;32mC:\\Users\\Kirti\\anaconda3\\lib\\site-packages\\pandas\\io\\excel\\_base.py\u001b[0m in \u001b[0;36minspect_excel_format\u001b[1;34m(path, content, storage_options)\u001b[0m\n\u001b[0;32m    947\u001b[0m     \u001b[1;32massert\u001b[0m \u001b[0mcontent_or_path\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    948\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 949\u001b[1;33m     with get_handle(\n\u001b[0m\u001b[0;32m    950\u001b[0m         \u001b[0mcontent_or_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstorage_options\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_text\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    951\u001b[0m     ) as handle:\n",
+      "\u001b[1;32mC:\\Users\\Kirti\\anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    649\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    650\u001b[0m             \u001b[1;31m# Binary mode\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 651\u001b[1;33m             \u001b[0mhandle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    652\u001b[0m         \u001b[0mhandles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    653\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Employee Allocation file.xlsx'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# === CONFIGURATION ===\n",
+    "allocation_file = \"Employee Allocation file.xlsx\"\n",
+    "allocation_sheet = \"Employee Allocation\"\n",
+    "\n",
+    "base_file = \"Base_File.xlsx\"   # <-- replace with your base file name\n",
+    "base_sheet = \"Updated\"         # <-- replace with your base sheet name\n",
+    "output_file = \"Phase3_Part2_Output.xlsx\"\n",
+    "\n",
+    "# === STEP 1: Load files ===\n",
+    "gsc_df = pd.read_excel(allocation_file, sheet_name=allocation_sheet, dtype={\"EMPLOYEE_ID\": str})\n",
+    "base_df_updated = pd.read_excel(base_file, sheet_name=base_sheet, dtype={\"PSID\": str})\n",
+    "\n",
+    "# === STEP 2: Filter ENTITY values ===\n",
+    "entities = [\"EDPM\", \"HDPG\", \"HDPI\", \"HSEP\"]\n",
+    "gfc_df = gsc_df[gsc_df[\"ENTITY\"].isin(entities)].copy()\n",
+    "\n",
+    "# === STEP 3: Write GFC sheet (we’ll save later together) ===\n",
+    "\n",
+    "# === STEP 4: Extract rows with EXCLUDED_REASON = \"Data Correlation – Request Amendment\" ===\n",
+    "amend_df = gfc_df[gfc_df[\"EXCLUDED_REASON\"] == \"Data Correlation – Request Amendment\"].copy()\n",
+    "\n",
+    "# === STEP 5: Delete those rows from gfc_df ===\n",
+    "gfc_df = gfc_df[gfc_df[\"EXCLUDED_REASON\"] != \"Data Correlation – Request Amendment\"].copy()\n",
+    "\n",
+    "# === STEP 6: Merge columns from gfc_df into base_df_updated ===\n",
+    "# Create lookup dictionary from gfc_df\n",
+    "lookup_cols = [\"DEP_CODE\", \"AID (Billed)\", \"EXCLUDED\", \"EXCLUDED_REASON\"]\n",
+    "for col in lookup_cols:\n",
+    "    base_df_updated[col] = base_df_updated[\"PSID\"].map(gfc_df.set_index(\"EMPLOYEE_ID\")[col])\n",
+    "\n",
+    "# Add blank \"-\" column\n",
+    "base_df_updated[\"-\"] = \"\"\n",
+    "\n",
+    "# === STEP 7: Derived Columns ===\n",
+    "base_df_updated[\"Con_amd\"] = base_df_updated[\"DEP_CODE\"].astype(str) + \"_\" + base_df_updated[\"AID (Billed)\"].astype(str)\n",
+    "base_df_updated[\"Con_Billing\"] = base_df_updated[\"Department ID\"].astype(str) + \"_\" + base_df_updated[\"AID\"].astype(str)\n",
+    "\n",
+    "def check_amd(row):\n",
+    "    if pd.isna(row[\"DEP_CODE\"]) or pd.isna(row[\"AID (Billed)\"]) or pd.isna(row[\"Department ID\"]) or pd.isna(row[\"AID\"]):\n",
+    "        return \"NA\"\n",
+    "    return row[\"Con_amd\"] == row[\"Con_Billing\"]\n",
+    "\n",
+    "base_df_updated[\"Check_amd\"] = base_df_updated.apply(check_amd, axis=1)\n",
+    "\n",
+    "# Observations_amd\n",
+    "def obs_amd(row):\n",
+    "    if row[\"Check_amd\"] == \"NA\":\n",
+    "        if pd.isna(row[\"Con_amd\"]) or row[\"Con_amd\"] in [\"NA\", \"nan\", \"\"]:\n",
+    "            return \"Resource left HSBC\"\n",
+    "        return None\n",
+    "    if row[\"Category for Static\"] == \"Billed\":\n",
+    "        if row[\"EXCLUDED\"] == 0:\n",
+    "            return \"Ok\"\n",
+    "    if row[\"Category for Static\"] in [\"Not Billed\", \"Others\"]:\n",
+    "        if row[\"EXCLUDED\"] == 1:\n",
+    "            return \"Ok\"\n",
+    "    return None\n",
+    "\n",
+    "base_df_updated[\"Observations_amd\"] = base_df_updated.apply(obs_amd, axis=1)\n",
+    "\n",
+    "# === STEP 8: Add run number column ===\n",
+    "# This allows multiple runs to be appended with unique run numbers\n",
+    "def get_run_number(path):\n",
+    "    if not os.path.exists(path):\n",
+    "        return 1\n",
+    "    try:\n",
+    "        prev = pd.ExcelFile(path)\n",
+    "        if \"Run_Log\" in prev.sheet_names:\n",
+    "            run_log = pd.read_excel(path, sheet_name=\"Run_Log\")\n",
+    "            if not run_log.empty:\n",
+    "                return run_log[\"Run_Num\"].max() + 1\n",
+    "    except Exception:\n",
+    "        pass\n",
+    "    return 1\n",
+    "\n",
+    "run_num = get_run_number(output_file)\n",
+    "base_df_updated[\"Run_Num\"] = run_num\n",
+    "gfc_df[\"Run_Num\"] = run_num\n",
+    "amend_df[\"Run_Num\"] = run_num\n",
+    "\n",
+    "# === STEP 9: Save to Excel with multiple sheets ===\n",
+    "with pd.ExcelWriter(output_file, mode=\"a\" if os.path.exists(output_file) else \"w\", engine=\"openpyxl\") as writer:\n",
+    "    gfc_df.to_excel(writer, sheet_name=\"GFC\", index=False)\n",
+    "    amend_df.to_excel(writer, sheet_name=\"Data Correlation – Amendments\", index=False)\n",
+    "    base_df_updated.to_excel(writer, sheet_name=\"Base_Updated\", index=False)\n",
+    "\n",
+    "    # Keep a run log\n",
+    "    run_log = pd.DataFrame({\"Run_Num\": [run_num]})\n",
+    "    run_log.to_excel(writer, sheet_name=\"Run_Log\", index=False)\n",
+    "\n",
+    "print(f\"✅ Phase III - Part 2 completed successfully. Output saved to {output_file}, Run_Num={run_num}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9b577c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: output1.xlsx\n",
+      "Processing: output2.xlsx\n",
+      "Processing: output3.xlsx\n",
+      "Done.\n"
      ]
     }
    ],
@@ -60,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "039942cf",
+   "id": "9fbe82df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bf7fe60",
+   "id": "d640ba68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44b5439e",
+   "id": "da66c771",
    "metadata": {},
    "outputs": [],
    "source": [
