--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4bdc2da",
+   "id": "2a52a805",
    "metadata": {},
    "outputs": [
     {
@@ -25,99 +25,71 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
     "\n",
-    "# === CONFIGURATION ===\n",
-    "allocation_file = \"Employee Allocation file.xlsx\"\n",
-    "allocation_sheet = \"Employee Allocation\"\n",
+    "# === STEP 1: Load the Employee Allocation file ===\n",
+    "alloc_file = \"Employee Allocation file.xlsx\"\n",
+    "df = pd.read_excel(alloc_file, sheet_name=\"Employee Allocation\", dtype={\"EMPLOYEE_ID\": str})\n",
     "\n",
-    "base_file = \"Base_File.xlsx\"   # <-- replace with your base file name\n",
-    "base_sheet = \"Updated\"         # <-- replace with your base sheet name\n",
-    "output_file = \"Phase3_Part2_Output.xlsx\"\n",
+    "# === STEP 2: Select ENTITY values [EDPM, HDPG, HDPI, HSEP] ===\n",
+    "gfc_df = df[df[\"ENTITY\"].isin([\"EDPM\", \"HDPG\", \"HDPI\", \"HSEP\"])].copy()\n",
     "\n",
-    "# === STEP 1: Load files ===\n",
-    "gsc_df = pd.read_excel(allocation_file, sheet_name=allocation_sheet, dtype={\"EMPLOYEE_ID\": str})\n",
-    "base_df_updated = pd.read_excel(base_file, sheet_name=base_sheet, dtype={\"PSID\": str})\n",
+    "# === STEP 3: Save this subset into sheet \"GFC\" later ===\n",
+    "# (We will export at the end)\n",
     "\n",
-    "# === STEP 2: Filter ENTITY values ===\n",
-    "entities = [\"EDPM\", \"HDPG\", \"HDPI\", \"HSEP\"]\n",
-    "gfc_df = gsc_df[gsc_df[\"ENTITY\"].isin(entities)].copy()\n",
-    "\n",
-    "# === STEP 3: Write GFC sheet (we’ll save later together) ===\n",
-    "\n",
-    "# === STEP 4: Extract rows with EXCLUDED_REASON = \"Data Correlation – Request Amendment\" ===\n",
+    "# === STEP 4: Separate \"Data Correlation – Request Amendment\" records ===\n",
     "amend_df = gfc_df[gfc_df[\"EXCLUDED_REASON\"] == \"Data Correlation – Request Amendment\"].copy()\n",
     "\n",
-    "# === STEP 5: Delete those rows from gfc_df ===\n",
+    "# === STEP 5: Delete these rows from gfc_df ===\n",
     "gfc_df = gfc_df[gfc_df[\"EXCLUDED_REASON\"] != \"Data Correlation – Request Amendment\"].copy()\n",
     "\n",
-    "# === STEP 6: Merge columns from gfc_df into base_df_updated ===\n",
-    "# Create lookup dictionary from gfc_df\n",
+    "# === STEP 6: Lookup from gfc_df into base_df_updated ===\n",
+    "# (Assuming base_df_updated already exists from Part 1)\n",
     "lookup_cols = [\"DEP_CODE\", \"AID (Billed)\", \"EXCLUDED\", \"EXCLUDED_REASON\"]\n",
+    "\n",
+    "# VLOOKUP style → keep only first match per EMPLOYEE_ID\n",
+    "gfc_unique = gfc_df.drop_duplicates(subset=[\"EMPLOYEE_ID\"], keep=\"first\")\n",
+    "\n",
     "for col in lookup_cols:\n",
-    "    base_df_updated[col] = base_df_updated[\"PSID\"].map(gfc_df.set_index(\"EMPLOYEE_ID\")[col])\n",
+    "    base_df_updated[col] = base_df_updated[\"PSID\"].map(\n",
+    "        gfc_unique.set_index(\"EMPLOYEE_ID\")[col]\n",
+    "    )\n",
     "\n",
-    "# Add blank \"-\" column\n",
-    "base_df_updated[\"-\"] = \"\"\n",
-    "\n",
-    "# === STEP 7: Derived Columns ===\n",
-    "base_df_updated[\"Con_amd\"] = base_df_updated[\"DEP_CODE\"].astype(str) + \"_\" + base_df_updated[\"AID (Billed)\"].astype(str)\n",
-    "base_df_updated[\"Con_Billing\"] = base_df_updated[\"Department ID\"].astype(str) + \"_\" + base_df_updated[\"AID\"].astype(str)\n",
+    "# === STEP 7: Add derived columns ===\n",
+    "base_df_updated[\"Con_amd\"] = (\n",
+    "    base_df_updated[\"DEP_CODE\"].fillna(\"\") + base_df_updated[\"AID (Billed)\"].fillna(\"\")\n",
+    ")\n",
+    "base_df_updated[\"Con_Billing\"] = (\n",
+    "    base_df_updated[\"Department ID\"].fillna(\"\") + base_df_updated[\"AID\"].fillna(\"\")\n",
+    ")\n",
     "\n",
     "def check_amd(row):\n",
-    "    if pd.isna(row[\"DEP_CODE\"]) or pd.isna(row[\"AID (Billed)\"]) or pd.isna(row[\"Department ID\"]) or pd.isna(row[\"AID\"]):\n",
-    "        return \"NA\"\n",
+    "    if not row[\"Con_amd\"] or not row[\"Con_Billing\"]:\n",
+    "        return pd.NA\n",
     "    return row[\"Con_amd\"] == row[\"Con_Billing\"]\n",
     "\n",
     "base_df_updated[\"Check_amd\"] = base_df_updated.apply(check_amd, axis=1)\n",
     "\n",
-    "# Observations_amd\n",
-    "def obs_amd(row):\n",
-    "    if row[\"Check_amd\"] == \"NA\":\n",
-    "        if pd.isna(row[\"Con_amd\"]) or row[\"Con_amd\"] in [\"NA\", \"nan\", \"\"]:\n",
-    "            return \"Resource left HSBC\"\n",
-    "        return None\n",
-    "    if row[\"Category for Static\"] == \"Billed\":\n",
-    "        if row[\"EXCLUDED\"] == 0:\n",
-    "            return \"Ok\"\n",
-    "    if row[\"Category for Static\"] in [\"Not Billed\", \"Others\"]:\n",
-    "        if row[\"EXCLUDED\"] == 1:\n",
-    "            return \"Ok\"\n",
-    "    return None\n",
+    "# Blank column for observations\n",
+    "base_df_updated[\"Observations_amd\"] = \"\"\n",
     "\n",
-    "base_df_updated[\"Observations_amd\"] = base_df_updated.apply(obs_amd, axis=1)\n",
+    "# === STEP 8: Apply logic for Observations_amd ===\n",
+    "# Case 1: Check_amd = NA and Con_amd = NA or blank → Resource left HSBC\n",
+    "mask1 = base_df_updated[\"Check_amd\"].isna() & base_df_updated[\"Con_amd\"].eq(\"\")\n",
+    "base_df_updated.loc[mask1, \"Observations_amd\"] = \"Resource left HSBC\"\n",
     "\n",
-    "# === STEP 8: Add run number column ===\n",
-    "# This allows multiple runs to be appended with unique run numbers\n",
-    "def get_run_number(path):\n",
-    "    if not os.path.exists(path):\n",
-    "        return 1\n",
-    "    try:\n",
-    "        prev = pd.ExcelFile(path)\n",
-    "        if \"Run_Log\" in prev.sheet_names:\n",
-    "            run_log = pd.read_excel(path, sheet_name=\"Run_Log\")\n",
-    "            if not run_log.empty:\n",
-    "                return run_log[\"Run_Num\"].max() + 1\n",
-    "    except Exception:\n",
-    "        pass\n",
-    "    return 1\n",
+    "# Case 2: Category for Static = Billed and EXCLUDED = 0 → Ok\n",
+    "mask2 = (base_df_updated[\"Category for Static\"] == \"Billed\") & (base_df_updated[\"EXCLUDED\"] == 0)\n",
+    "base_df_updated.loc[mask2, \"Observations_amd\"] = \"Ok\"\n",
     "\n",
-    "run_num = get_run_number(output_file)\n",
-    "base_df_updated[\"Run_Num\"] = run_num\n",
-    "gfc_df[\"Run_Num\"] = run_num\n",
-    "amend_df[\"Run_Num\"] = run_num\n",
+    "# Case 3: Category for Static in [Not Billed, Others] and EXCLUDED = 1 → Ok\n",
+    "mask3 = base_df_updated[\"Category for Static\"].isin([\"Not Billed\", \"Others\"]) & (base_df_updated[\"EXCLUDED\"] == 1)\n",
+    "base_df_updated.loc[mask3, \"Observations_amd\"] = \"Ok\"\n",
     "\n",
-    "# === STEP 9: Save to Excel with multiple sheets ===\n",
-    "with pd.ExcelWriter(output_file, mode=\"a\" if os.path.exists(output_file) else \"w\", engine=\"openpyxl\") as writer:\n",
+    "# === STEP 9: Export result ===\n",
+    "with pd.ExcelWriter(\"Phase3_Part2_Output.xlsx\", engine=\"openpyxl\") as writer:\n",
+    "    base_df_updated.to_excel(writer, sheet_name=\"Base Updated\", index=False)\n",
     "    gfc_df.to_excel(writer, sheet_name=\"GFC\", index=False)\n",
-    "    amend_df.to_excel(writer, sheet_name=\"Data Correlation – Amendments\", index=False)\n",
-    "    base_df_updated.to_excel(writer, sheet_name=\"Base_Updated\", index=False)\n",
-    "\n",
-    "    # Keep a run log\n",
-    "    run_log = pd.DataFrame({\"Run_Num\": [run_num]})\n",
-    "    run_log.to_excel(writer, sheet_name=\"Run_Log\", index=False)\n",
-    "\n",
-    "print(f\"✅ Phase III - Part 2 completed successfully. Output saved to {output_file}, Run_Num={run_num}\")\n"
+    "    amend_df.to_excel(writer, sheet_name=\"Data Correlation – Amendments\", index=False)\n"
    ]
   },
   {
