--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,56 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "ba36c6ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def add_lookup_block(df):\n",
+    "    # Add separator col with unique name inside df\n",
+    "    sep_col = f\"-_{df.shape[1]}\"   # unique internal name\n",
+    "    df[sep_col] = \"\"\n",
+    "\n",
+    "    # Add the 7 cols with unique internal names\n",
+    "    lookup_cols = [\"DEP_CODE\", \"AID (Billed)\", \"EXCLUDED\",\n",
+    "                   \"EXCLUDED_REASON\", \"Check_amd\", \"Con_amd\", \"Observations_amd\"]\n",
+    "    \n",
+    "    for col in lookup_cols:\n",
+    "        df[f\"{col}_{df.shape[1]}\"] = pd.NA  # unique version\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "# Example usage\n",
+    "base_df_updated = pd.DataFrame({\n",
+    "    \"PSID\": [101, 102, 103],\n",
+    "    \"Name\": [\"A\", \"B\", \"C\"]\n",
+    "})\n",
+    "\n",
+    "# First run\n",
+    "base_df_updated = add_lookup_block(base_df_updated)\n",
+    "\n",
+    "# Second run (output of 1st run as input)\n",
+    "base_df_updated = add_lookup_block(base_df_updated)\n",
+    "\n",
+    "# Before exporting to Excel → reset headers back to original names\n",
+    "original_headers = list(base_df_updated.columns)\n",
+    "\n",
+    "# Fix duplicate headers:\n",
+    "clean_headers = []\n",
+    "for h in original_headers:\n",
+    "    if \"_\" in str(h) and h.split(\"_\")[0] in [\"-\", \"DEP_CODE\", \"AID (Billed)\", \"EXCLUDED\",\n",
+    "                                             \"EXCLUDED_REASON\", \"Check_amd\", \"Con_amd\", \"Observations_amd\"]:\n",
+    "        clean_headers.append(h.split(\"_\")[0])   # reset to original name\n",
+    "    else:\n",
+    "        clean_headers.append(h)\n",
+    "\n",
+    "base_df_updated.to_excel(\"output.xlsx\", index=False, header=clean_headers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "2a52a805",
    "metadata": {},
    "outputs": [
