--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,53 +2,164 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ba36c6ed",
+   "execution_count": 9,
+   "id": "ce701e7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "def add_lookup_block(df):\n",
-    "    # Add separator col with unique name inside df\n",
-    "    sep_col = f\"-_{df.shape[1]}\"   # unique internal name\n",
-    "    df[sep_col] = \"\"\n",
-    "\n",
-    "    # Add the 7 cols with unique internal names\n",
-    "    lookup_cols = [\"DEP_CODE\", \"AID (Billed)\", \"EXCLUDED\",\n",
-    "                   \"EXCLUDED_REASON\", \"Check_amd\", \"Con_amd\", \"Observations_amd\"]\n",
+    "    # The new block of columns (with same headers every time)\n",
+    "    new_block = pd.DataFrame({\n",
+    "        \"-\": [pd.NA] * len(df),\n",
+    "        \"DEP_CODE\": [pd.NA] * len(df),\n",
+    "        \"AID (Billed)\": [pd.NA] * len(df),\n",
+    "        \"EXCLUDED\": [pd.NA] * len(df),\n",
+    "        \"EXCLUDED_REASON\": [pd.NA] * len(df),\n",
+    "        \"Check_amd\": [pd.NA] * len(df),\n",
+    "        \"Con_amd\": [pd.NA] * len(df),\n",
+    "        \"Observations_amd\": [pd.NA] * len(df),\n",
+    "    })\n",
     "    \n",
-    "    for col in lookup_cols:\n",
-    "        df[f\"{col}_{df.shape[1]}\"] = pd.NA  # unique version\n",
+    "    # Concat ensures block is appended at the end\n",
+    "    return pd.concat([df, new_block], axis=1)\n",
     "\n",
-    "    return df\n",
-    "\n",
-    "# Example usage\n",
-    "base_df_updated = pd.DataFrame({\n",
-    "    \"PSID\": [101, 102, 103],\n",
-    "    \"Name\": [\"A\", \"B\", \"C\"]\n",
-    "})\n",
+    "# # Example base df\n",
+    "# base_df = pd.DataFrame({\n",
+    "#     \"PSID\": [101, 102],\n",
+    "#     \"Name\": [\"A\", \"B\"]\n",
+    "# })\n",
     "\n",
     "# First run\n",
-    "base_df_updated = add_lookup_block(base_df_updated)\n",
+    "# df1 = add_lookup_block(base_df)\n",
+    "# Second run\n",
+    "df1 = pd.read_excel(\"output.xlsx\")\n",
+    "df2 = add_lookup_block(df1)\n",
     "\n",
-    "# Second run (output of 1st run as input)\n",
-    "base_df_updated = add_lookup_block(base_df_updated)\n",
-    "\n",
-    "# Before exporting to Excel → reset headers back to original names\n",
-    "original_headers = list(base_df_updated.columns)\n",
-    "\n",
-    "# Fix duplicate headers:\n",
-    "clean_headers = []\n",
-    "for h in original_headers:\n",
-    "    if \"_\" in str(h) and h.split(\"_\")[0] in [\"-\", \"DEP_CODE\", \"AID (Billed)\", \"EXCLUDED\",\n",
-    "                                             \"EXCLUDED_REASON\", \"Check_amd\", \"Con_amd\", \"Observations_amd\"]:\n",
-    "        clean_headers.append(h.split(\"_\")[0])   # reset to original name\n",
-    "    else:\n",
-    "        clean_headers.append(h)\n",
-    "\n",
-    "base_df_updated.to_excel(\"output.xlsx\", index=False, header=clean_headers)\n"
+    "df2.to_excel(\"output.xlsx\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81cdaa1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# === STEP 1: Load the Employee Allocation file ===\n",
+    "alloc_file = \"Employee Allocation file.xlsx\"\n",
+    "df = pd.read_excel(alloc_file, sheet_name=\"Employee Allocation\", dtype={\"EMPLOYEE_ID\": str})\n",
+    "\n",
+    "# === STEP 2: Select ENTITY values [EDPM, HDPG, HDPI, HSEP] ===\n",
+    "gfc_df = df[df[\"ENTITY\"].isin([\"EDPM\", \"HDPG\", \"HDPI\", \"HSEP\"])].copy()\n",
+    "\n",
+    "# === STEP 3: Save this subset into sheet \"GFC\" later ===\n",
+    "# (We will export at the end)\n",
+    "\n",
+    "# === STEP 4: Separate \"Data Correlation – Request Amendment\" records ===\n",
+    "amend_df = gfc_df[gfc_df[\"EXCLUDED_REASON\"] == \"Data Correlation – Request Amendment\"].copy()\n",
+    "\n",
+    "# === STEP 5: Delete these rows from gfc_df ===\n",
+    "gfc_df = gfc_df[gfc_df[\"EXCLUDED_REASON\"] != \"Data Correlation – Request Amendment\"].copy()\n",
+    "\n",
+    "# === STEP 6: Lookup from gfc_df into base_df_updated ===\n",
+    "# (Assuming base_df_updated already exists from Part 1)\n",
+    "lookup_cols = [\"DEP_CODE\", \"AID (Billed)\", \"EXCLUDED\", \"EXCLUDED_REASON\"]\n",
+    "\n",
+    "# VLOOKUP style → keep only first match per EMPLOYEE_ID\n",
+    "gfc_unique = gfc_df.drop_duplicates(subset=[\"EMPLOYEE_ID\"], keep=\"first\")\n",
+    "\n",
+    "# ---- NEW LOGIC: create a fresh block of columns each run ----\n",
+    "# Count how many lookup blocks already exist (by counting \"DEP_CODE\" columns)\n",
+    "block_count = sum(col.startswith(\"DEP_CODE\") for col in base_df_updated.columns) + 1\n",
+    "\n",
+    "# Add suffix to distinguish this block\n",
+    "suffix = f\"_set{block_count}\"\n",
+    "\n",
+    "# Add lookup columns for this block\n",
+    "for col in lookup_cols:\n",
+    "    new_col = col + suffix\n",
+    "    base_df_updated[new_col] = base_df_updated[\"PSID\"].map(\n",
+    "        gfc_unique.set_index(\"EMPLOYEE_ID\")[col]\n",
+    "    )\n",
+    "\n",
+    "# === STEP 7: Add derived columns ===\n",
+    "base_df_updated[\"Con_amd\" + suffix] = (\n",
+    "    base_df_updated[\"DEP_CODE\" + suffix].fillna(\"\") + base_df_updated[\"AID (Billed)\" + suffix].fillna(\"\")\n",
+    ")\n",
+    "base_df_updated[\"Con_Billing\" + suffix] = (\n",
+    "    base_df_updated[\"Department ID\"].fillna(\"\") + base_df_updated[\"AID\"].fillna(\"\")\n",
+    ")\n",
+    "\n",
+    "def check_amd(row):\n",
+    "    if not row[\"Con_amd\" + suffix] or not row[\"Con_Billing\" + suffix]:\n",
+    "        return pd.NA\n",
+    "    return row[\"Con_amd\" + suffix] == row[\"Con_Billing\" + suffix]\n",
+    "\n",
+    "base_df_updated[\"Check_amd\" + suffix] = base_df_updated.apply(check_amd, axis=1)\n",
+    "\n",
+    "# Blank column for observations\n",
+    "base_df_updated[\"Observations_amd\" + suffix] = \"\"\n",
+    "\n",
+    "# === STEP 8: Apply logic for Observations_amd ===\n",
+    "mask1 = base_df_updated[\"Check_amd\" + suffix].isna() & base_df_updated[\"Con_amd\" + suffix].eq(\"\")\n",
+    "base_df_updated.loc[mask1, \"Observations_amd\" + suffix] = \"Resource left HSBC\"\n",
+    "\n",
+    "mask2 = (base_df_updated[\"Category for Static\"] == \"Billed\") & (base_df_updated[\"EXCLUDED\" + suffix] == 0)\n",
+    "base_df_updated.loc[mask2, \"Observations_amd\" + suffix] = \"Ok\"\n",
+    "\n",
+    "mask3 = base_df_updated[\"Category for Static\"].isin([\"Not Billed\", \"Others\"]) & (base_df_updated[\"EXCLUDED\" + suffix] == 1)\n",
+    "base_df_updated.loc[mask3, \"Observations_amd\" + suffix] = \"Ok\"\n",
+    "\n",
+    "# === STEP 9: Export result ===\n",
+    "with pd.ExcelWriter(\"Phase3_Part2_Output.xlsx\", engine=\"openpyxl\") as writer:\n",
+    "    base_df_updated.to_excel(writer, sheet_name=\"Base Updated\", index=False)\n",
+    "    gfc_df.to_excel(writer, sheet_name=\"GFC\", index=False)\n",
+    "    amend_df.to_excel(writer, sheet_name=\"Data Correlation – Amendments\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85faad7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38348414",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15497914",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5748f15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "946d0e85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
