--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,8 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4cfac6df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === STEP 6: Always add a separator column before new block ===\n",
+    "sep_base = \"-\"\n",
+    "sep_name = sep_base\n",
+    "suffix = 1\n",
+    "while sep_name in base_df_updated.columns:\n",
+    "    sep_name = f\"{sep_base}_set{suffix}\"\n",
+    "    suffix += 1\n",
+    "\n",
+    "base_df_updated.insert(len(base_df_updated.columns), sep_name, pd.NA)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "ce701e7f",
+   "id": "0fc9e2d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +39,7 @@
     "        \"Con_amd\": [pd.NA] * len(df),\n",
     "        \"Observations_amd\": [pd.NA] * len(df),\n",
     "    })\n",
+    "    a\n",
     "    \n",
     "    # Concat ensures block is appended at the end\n",
     "    return pd.concat([df, new_block], axis=1)\n",
@@ -43,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81cdaa1e",
+   "id": "c49d0acd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85faad7e",
+   "id": "6804727e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -132,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38348414",
+   "id": "e7ce4eb2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15497914",
+   "id": "3c844135",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5748f15",
+   "id": "542a8a56",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "946d0e85",
+   "id": "bbcafdc2",
    "metadata": {},
    "outputs": [],
    "source": []
